[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Hologram.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Anita semi square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Calistoga-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/SoilFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 83
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 103
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 112
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_top = 1
extra_spacing_bottom = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 89
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Hologram" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SoilInfo" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="HBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/SoilInfo"]
anchor_right = 1.0
anchor_bottom = 0.694

[node name="PlanetName" type="Label" parent="AspectRatioContainer/SoilInfo/HBoxContainer"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Planet"
align = 1
valign = 1
autowrap = true

[node name="PlanetType" type="Label" parent="AspectRatioContainer/SoilInfo/HBoxContainer"]
unique_name_in_owner = true
margin_top = 125.0
margin_right = 720.0
margin_bottom = 247.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.317647, 0.694118, 0.607843, 1 )
custom_fonts/font = SubResource( 1 )
text = "Rocky"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="AspectRatioContainer/SoilInfo/HBoxContainer"]
margin_top = 251.0
margin_right = 720.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HasNutrients" type="Label" parent="AspectRatioContainer/SoilInfo/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Has Nutrients"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer3" type="HBoxContainer" parent="AspectRatioContainer/SoilInfo/HBoxContainer"]
margin_top = 377.0
margin_right = 720.0
margin_bottom = 499.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseToSun" type="Label" parent="AspectRatioContainer/SoilInfo/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Far from Sun"
align = 1
valign = 1
autowrap = true

[node name="ScanProgress" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="HBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/ScanProgress"]
margin_right = 720.0
margin_bottom = 720.0

[node name="ScanObjectName" type="Label" parent="AspectRatioContainer/ScanProgress/HBoxContainer"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Scan Object"
align = 1
valign = 1
autowrap = true

[node name="ScanProgressLabel" type="Label" parent="AspectRatioContainer/ScanProgress/HBoxContainer"]
unique_name_in_owner = true
margin_top = 362.0
margin_right = 720.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.317647, 0.694118, 0.607843, 1 )
custom_fonts/font = SubResource( 1 )
text = "0%"
align = 1
autowrap = true

[node name="SeedInfo" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="HBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/SeedInfo"]
margin_right = 720.0
margin_bottom = 720.0

[node name="SeedPlantName" type="Label" parent="AspectRatioContainer/SeedInfo/HBoxContainer"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.24
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Grabroot"
align = 1
valign = 2
autowrap = true

[node name="SeedCount" type="Label" parent="AspectRatioContainer/SeedInfo/HBoxContainer"]
unique_name_in_owner = true
margin_top = 142.0
margin_right = 720.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1
autowrap = true

[node name="PlantInfo" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="HBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/PlantInfo"]
margin_right = 720.0
margin_bottom = 720.0

[node name="PlantName" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Grabroot"
align = 1
valign = 1
autowrap = true

[node name="PlantType" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer"]
unique_name_in_owner = true
margin_top = 181.0
margin_right = 720.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.317647, 0.694118, 0.607843, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tendril"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="AspectRatioContainer/PlantInfo/HBoxContainer"]
margin_top = 362.0
margin_right = 720.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GrowthStage" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 237.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
valign = 1
autowrap = true

[node name="Slash" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer/HBoxContainer2"]
margin_left = 241.0
margin_right = 478.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "/"
align = 1
valign = 1
autowrap = true

[node name="MaxGrowthStage" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer/HBoxContainer2"]
margin_left = 482.0
margin_right = 720.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "3"
valign = 1
autowrap = true

[node name="CurrentlyGrowing" type="Label" parent="AspectRatioContainer/PlantInfo/HBoxContainer"]
unique_name_in_owner = true
margin_top = 543.0
margin_right = 720.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "still growing"
align = 1
valign = 1
autowrap = true

[node name="GrowBeam" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="HBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/GrowBeam"]
margin_right = 720.0
margin_bottom = 720.0

[node name="IsGrowingLabel" type="Label" parent="AspectRatioContainer/GrowBeam/HBoxContainer"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.945098, 0.901961, 0.372549, 1 )
custom_fonts/font = SubResource( 2 )
text = "growing.."
align = 1
valign = 1

[node name="JuiceLeft" type="Label" parent="AspectRatioContainer/GrowBeam/HBoxContainer"]
unique_name_in_owner = true
margin_top = 362.0
margin_right = 720.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.945098, 0.901961, 0.372549, 1 )
custom_fonts/font = SubResource( 2 )
text = "80%"
align = 1

[node name="PlanetHop" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer/PlanetHop"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HopLabel" type="Label" parent="AspectRatioContainer/PlanetHop/CenterContainer"]
unique_name_in_owner = true
margin_left = 138.0
margin_top = 310.0
margin_right = 581.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sun: Far"
align = 1
valign = 1

[node name="ScanHover" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
visible = false
margin_left = 280.0
margin_right = 1000.0
margin_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer/ScanHover"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScanHoverLabel" type="Label" parent="AspectRatioContainer/ScanHover/CenterContainer"]
unique_name_in_owner = true
margin_left = 138.0
margin_top = 310.0
margin_right = 581.0
margin_bottom = 410.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.356863, 0.337255, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sun: Far"
align = 1
valign = 1
